src/test/deca/syntax/invalid/while_decl.deca
//Test invalide qui declare une variable dans la condition while

//Resultat: Erreur

{
    while(int x = 0){
        println("Invalide");
    }
}